// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Component should render correctly and proxy hideControls prop 1`] = `
<VideoBox
  show={true}
>
  <VideoBrick
    autoplay={false}
    hideControls={false}
    link="coremedia:///media/6200/data"
    loop={false}
    mute={false}
    playing={false}
  />
</VideoBox>
`;

exports[`Video Component should render correctly and proxy link prop 1`] = `
<VideoBox
  show={true}
>
  <VideoBrick
    autoplay={false}
    hideControls={false}
    link="coremedia:///media/6200/data"
    loop={false}
    mute={false}
    playing={false}
  />
</VideoBox>
`;

exports[`Video Component should render correctly and proxy loop prop 1`] = `
<VideoBox
  show={true}
>
  <VideoBrick
    autoplay={false}
    hideControls={false}
    link="coremedia:///media/6200/data"
    loop={false}
    mute={false}
    playing={false}
  />
</VideoBox>
`;

exports[`Video Component should render correctly and proxy mute prop 1`] = `
<VideoBox
  show={true}
>
  <VideoBrick
    autoplay={false}
    hideControls={false}
    link="coremedia:///media/6200/data"
    loop={false}
    mute={false}
    playing={false}
  />
</VideoBox>
`;

exports[`Video Component should render correctly and proxy pictureLink, pictureAlt and pictureTitle props 1`] = `
<VideoBox
  show={true}
>
  <VideoBrick
    autoplay={false}
    hideControls={false}
    link="coremedia:///media/6200/data"
    loop={false}
    mute={false}
    pictureAlt="Alt"
    pictureLink="coremedia:///image/6188/data"
    pictureTitle="Title"
    playing={false}
  />
</VideoBox>
`;

exports[`Video Component should render correctly and proxy playing prop 1`] = `
<VideoBox
  show={true}
>
  <VideoBrick
    autoplay={false}
    hideControls={false}
    link="coremedia:///media/6200/data"
    loop={false}
    mute={false}
    playing={false}
  />
</VideoBox>
`;
